# backend_fastapi

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_06_25_2104-3ebe1ffce191_create_table_user.py  2025_06_25_2106-1c39db807239_add_column_is_blocked_in_table_user.py  2025_06_28_1636-58c1e94b6aea_troubleshoot.py  2025_06_28_1733-39faabb08fec_add_role.py
src/: main.py
src/account/models/: role.py  user.py
src/account/repositories/: __init__.py  role.py  user.py
src/account/routers/: __init__.py  role.py  user.py
src/account/schemas/: __init__.py  role.py  user.py
src/account/services/: role.py  user.py
src/core/: config.py  routers.py
src/core/orm/: __init__.py  base.py  database.py
