[project]
name = "backend_fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "mp4treiser",email = "mp4treiser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
